update cost breakup of 3.5

--- a/examples/write_a_novel/novel_gpt3.5.ipynb
+++ b/examples/write_a_novel/novel_gpt3.5.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e46a8ad2-2ab9-435d-bccc-098888166c87",
    "metadata": {},
    "outputs": [
@@ -216,32 +216,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Book 1 Chapter 1 has 801 tokens\n",
-      "Book 1 Chapter 2 has 930 tokens\n",
-      "Book 1 Chapter 3 has 1015 tokens\n",
-      "Book 1 Chapter 4 has 886 tokens\n",
-      "Book 1 Chapter 5 has 895 tokens\n",
-      "Book 2 Chapter 1 has 799 tokens\n",
-      "Book 2 Chapter 2 has 846 tokens\n",
-      "Book 2 Chapter 3 has 898 tokens\n",
-      "Book 2 Chapter 4 has 903 tokens\n",
-      "Book 2 Chapter 5 has 946 tokens\n",
-      "Book 3 Chapter 1 has 590 tokens\n",
-      "Book 3 Chapter 2 has 524 tokens\n",
-      "Book 3 Chapter 3 has 663 tokens\n",
-      "Book 3 Chapter 4 has 850 tokens\n",
-      "Book 3 Chapter 5 has 594 tokens\n",
-      "Book 4 Chapter 1 has 623 tokens\n",
-      "Book 4 Chapter 2 has 867 tokens\n",
-      "Book 4 Chapter 3 has 680 tokens\n",
-      "Book 4 Chapter 4 has 510 tokens\n",
-      "Book 4 Chapter 5 has 586 tokens\n",
-      "Book 5 Chapter 1 has 583 tokens\n",
-      "Book 5 Chapter 2 has 526 tokens\n",
-      "Book 5 Chapter 3 has 608 tokens\n",
-      "Book 5 Chapter 4 has 650 tokens\n",
-      "Book 5 Chapter 5 has 596 tokens\n",
-      "The full book has 18394 tokens\n"
+      "Book 1 Chapter 1 was not found on disk\n",
+      "Book 1 Chapter 2 was not found on disk\n",
+      "Book 1 Chapter 3 was not found on disk\n",
+      "Book 1 Chapter 4 was not found on disk\n",
+      "Book 1 Chapter 5 was not found on disk\n",
+      "Book 2 Chapter 1 was not found on disk\n",
+      "Book 2 Chapter 2 was not found on disk\n",
+      "Book 2 Chapter 3 was not found on disk\n",
+      "Book 2 Chapter 4 was not found on disk\n",
+      "Book 2 Chapter 5 was not found on disk\n",
+      "Book 3 Chapter 1 was not found on disk\n",
+      "Book 3 Chapter 2 was not found on disk\n",
+      "Book 3 Chapter 3 was not found on disk\n",
+      "Book 3 Chapter 4 was not found on disk\n",
+      "Book 3 Chapter 5 was not found on disk\n",
+      "Book 4 Chapter 1 was not found on disk\n",
+      "Book 4 Chapter 2 was not found on disk\n",
+      "Book 4 Chapter 3 was not found on disk\n",
+      "Book 4 Chapter 4 was not found on disk\n",
+      "Book 4 Chapter 5 was not found on disk\n",
+      "Book 5 Chapter 1 was not found on disk\n",
+      "Book 5 Chapter 2 was not found on disk\n",
+      "Book 5 Chapter 3 was not found on disk\n",
+      "Book 5 Chapter 4 was not found on disk\n",
+      "Book 5 Chapter 5 was not found on disk\n",
+      "The full book has 0 tokens\n"
      ]
     }
    ],
@@ -250,7 +250,7 @@
     "for book in range(1, 6):\n",
     "    for chapter in range(1, 6):\n",
     "        try:\n",
-    "            with open(f'gpt-4/book{book}_chapter{chapter}.md') as f:\n",
+    "            with open(f'gpt-3.5-turbo/book{book}_chapter{chapter}.md') as f:\n",
     "                text = f.read()\n",
     "            tokens = agent.model.token_count(text)\n",
     "            print(f'Book {book} Chapter {chapter} has {tokens} tokens')\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7c7b8bc3-0ae3-4b83-9e9b-ecd506f039c3",
    "metadata": {
     "tags": []
@@ -297,54 +297,128 @@
       "  {\n",
       "    \"command\": \"think\",\n",
       "    \"notes\": [\n",
-      "      \"I need to research recent scientific and technological developments to use as inspiration for the novel\",\n",
-      "      \"I should also read works by Carl Sagan and Douglas Adams to get a sense of their style\",\n",
-      "      \"I need to create a consistent and rich world with diverse and well-developed characters\",\n",
-      "      \"I should create a draft for each chapter before expanding them into full-length novel chapters\",\n",
-      "      \"Each book should have at least 5 chapters, and each chapter should end with a cliffhanger\"\n",
-      "    ]\n",
+      "      \"This is a huge task and requires a lot of planning and organization.\",\n",
+      "      \"I need to break down the task into smaller, more manageable tasks.\",\n",
+      "      \"I need to research recent scientific and technological developments to use as inspiration for the novel.\",\n",
+      "      \"I need to create a consistent and rich world setting.\",\n",
+      "      \"I need to create a diverse cast of well-developed characters with their own story arcs.\",\n",
+      "      \"I need to create a plot with many twists that spans across all books.\",\n",
+      "      \"I need to create a draft for each chapter first and then expand them into full-length novel chapters.\",\n",
+      "      \"I need to make sure that each chapter ends with a cliffhanger.\",\n",
+      "      \"I need to make sure that the characters and world setting are consistent in every chapter.\",\n",
+      "      \"I need to save each chapter in the format `book{X}_chapter{Y}.md`.\"\n",
+      "    ],\n",
+      "    \"summary\": \"Plan steps to achieve goal\"\n",
       "  },\n",
       "  {\n",
       "    \"command\": \"delegate\",\n",
+      "    \"notes\": [\n",
+      "      \"I will delegate the task of researching recent scientific and technological developments to a worker.\",\n",
+      "      \"I will provide them with some resources to get started.\"\n",
+      "    ],\n",
       "    \"summary\": \"Research recent scientific and technological developments\",\n",
       "    \"content\": {\n",
       "      \"instruction\": [\n",
-      "        \"Research recent scientific and technological developments that could be used as inspiration for the novel\",\n",
-      "        \"Write a summary of each development and how it could be used in the novel\"\n",
+      "        \"Research recent scientific and technological developments that can be used as inspiration for a scifi novel\",\n",
+      "        \"Write a summary of each development and how it can be used in the novel\"\n",
       "      ],\n",
       "      \"files\": {\n",
-      "        \"developments.txt\": \"A list of recent scientific and technological developments and how they could be used in the novel\"\n",
+      "        \"resources.txt\": \"A list of resources to get started\"\n",
       "      },\n",
-      "      \"context\": \"You are writing a scifi novel inspired by Carl Sagan and Douglas Adams. You need to research recent scientific and technological developments that could be used as inspiration for the novel.\"\n",
+      "      \"context\": \"You are researching recent scientific and technological developments that can be used as inspiration for a scifi novel. Use the resources provided to get started.\"\n",
       "    }\n",
       "  }\n",
       "]\n",
       "system: \n",
-      "`delegate` returns: Instruction `Research recent scientific and technological developments that could be used as inspiration for the novel and write a summary of each development and how it could be used in the novel` returns: Here is a list of recent technological developments and how they could be used in the novel:\n",
-      "\n",
-      "- A fabric armband that doubles as a touch pad for playing video games, sketching cartoons, and signing documents.\n",
-      "- Next-generation smart textiles that incorporate LEDs, sensors, energy harvesting, and storage, which can be produced in any size or shape.\n",
-      "- Atomically thin transistors grown on top of computer chips, paving the way for a new generation of transistor technology.\n",
-      "- Quantum composites that may store electricity.\n",
-      "- Fully recyclable printed electronics that replace the use of chemicals with water in the fabrication process.\n",
-      "\n",
-      "The novel could feature a character who uses the fabric armband to control their devices or as part of a futuristic outfit. The smart textiles could be used in clothing that changes color or pattern based on the wearer's mood or environment. Atomically thin transistors could be used to create ultra-thin devices or to improve the performance of existing technology. Quantum composites could be used to store energy in futuristic vehicles or buildings. Fully recyclable printed electronics could be used in sustainable technology or as part of a plot point about environmentally-friendly manufacturing.\n",
+      "`delegate` returns: Instruction `Research recent scientific and technological developments that can be used as inspiration for a scifi novel and write a summary of each development and how it can be used in the novel` returns: Recent scientific and technological developments that could be used as inspiration for a scifi novel include: quantum computing, nanotechnology, augmented reality, artificial intelligence, space travel and exploration, virtual reality, biotechnology, robotics, renewable energy, and 3D printing. Each area has its own unique potential consequences and implications for society, making them ideal for exploration in science fiction.\n",
       "\n",
       "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
       "assistant: ```\n",
       "{\n",
       "  \"command\": \"delegate\",\n",
-      "  \"summary\": \"Create a consistent and rich world with diverse and well-developed characters\",\n",
+      "  \"notes\": [\n",
+      "    \"I will delegate the task of creating a consistent and rich world setting to a worker.\",\n",
+      "    \"I will provide them with the list of recent scientific and technological developments to use as inspiration.\"\n",
+      "  ],\n",
+      "  \"summary\": \"Create a consistent and rich world setting\",\n",
       "  \"content\": {\n",
       "    \"instruction\": [\n",
-      "      \"Create a detailed outline of the world and its history, including any relevant scientific or technological developments\",\n",
-      "      \"Create a list of diverse and well-developed characters, including their backstories and motivations\"\n",
+      "      \"Use the list of recent scientific and technological developments provided to create a consistent and rich world setting for the scifi novel\",\n",
+      "      \"Write a summary of the world setting and how it relates to the scientific and technological developments\"\n",
       "    ],\n",
       "    \"files\": {\n",
-      "      \"world_outline.txt\": \"A detailed outline of the world and its history\",\n",
-      "      \"character_list.txt\": \"A list of diverse and well-developed characters\"\n",
+      "      \"recent_developments.txt\": \"A list of recent scientific and technological developments to use as inspiration\"\n",
       "    },\n",
-      "    \"context\": \"You are writing a scifi novel inspired by Carl Sagan and Douglas Adams. You need to create a consistent and rich world with diverse and well-developed characters.\"\n",
+      "    \"context\": \"You are creating a consistent and rich world setting for the scifi novel. Use the list of recent scientific and technological developments provided to guide your world building.\"\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "system: \n",
+      "`delegate` returns: Instruction `Create a consistent and rich world setting for the scifi novel using the list of recent scientific and technological developments provided. Write a summary of the world setting and how it relates to the scientific and technological developments.` returns: In this futuristic world, many of the recent technological developments listed in the ScienceDaily article have been integrated into society. These advancements include AI, quantum computing, nanotechnology, biotechnology, renewable energy, and more. AI has been incorporated into daily life in the form of personal assistants and autonomous vehicles. Quantum computing has revolutionized data processing and encryption. Nanotechnology has led to breakthroughs in medicine and materials science. Biotechnology has allowed for genetic engineering and personalized medicine. Renewable energy has replaced fossil fuels as the primary source of energy. These technological advancements have greatly impacted society as a whole, leading to increased efficiency, productivity, and quality of life.\n",
+      "\n",
+      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
+      "assistant: ```\n",
+      "{\n",
+      "  \"command\": \"delegate\",\n",
+      "  \"notes\": [\n",
+      "    \"I will delegate the task of creating a diverse cast of well-developed characters with their own story arcs to a worker.\",\n",
+      "    \"I will provide them with some resources to get started.\"\n",
+      "  ],\n",
+      "  \"summary\": \"Create a diverse cast of well-developed characters with their own story arcs\",\n",
+      "  \"content\": {\n",
+      "    \"instruction\": [\n",
+      "      \"Create a diverse cast of characters for the scifi novel, each with their own unique story arc\",\n",
+      "      \"Write a summary of each character and their story arc\"\n",
+      "    ],\n",
+      "    \"files\": {\n",
+      "      \"resources.txt\": \"A list of resources to get started\"\n",
+      "    },\n",
+      "    \"context\": \"You are creating a diverse cast of well-developed characters with their own story arcs for the scifi novel. Use the resources provided to get started.\"\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "system: \n",
+      "`delegate` returns: Instruction `Create a diverse cast of characters for the scifi novel, each with their own unique story arc` returns: << Maximum AI autopilot cycles reached. Please confirm you want to continue. >>\n",
+      "Instruction `Write a summary of each character and their story arc` returns: I was unable to load the story_arcs.txt file. Could you please provide me with the necessary information about the story arcs so that I can create a summary of each character and their story arc?\n",
+      "\n",
+      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
+      "assistant: ```\n",
+      "{\n",
+      "  \"command\": \"think\",\n",
+      "  \"notes\": [\n",
+      "    \"The worker was unable to load the story_arcs.txt file.\",\n",
+      "    \"I need to ask the user for the necessary information about the story arcs.\",\n",
+      "    \"I will then delegate the task of creating a summary of each character and their story arc to a worker.\"\n",
+      "  ],\n",
+      "  \"summary\": \"Plan next steps\"\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "```\n",
+      "{\n",
+      "  \"command\": \"answer\",\n",
+      "  \"content\": \"Sure, I can provide you with the necessary information about the story arcs. What would you like to know?\"\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "After receiving the necessary information from the user:\n",
+      "\n",
+      "```\n",
+      "{\n",
+      "  \"command\": \"delegate\",\n",
+      "  \"notes\": [\n",
+      "    \"I will delegate the task of creating a summary of each character and their story arc to a worker.\",\n",
+      "    \"I will provide them with the necessary information about the story arcs.\"\n",
+      "  ],\n",
+      "  \"summary\": \"Create a summary of each character and their story arc\",\n",
+      "  \"content\": {\n",
+      "    \"instruction\": [\n",
+      "      \"Create a summary of each character and their story arc for the scifi novel\"\n",
+      "    ],\n",
+      "    \"files\": {\n",
+      "      \"story_arcs.txt\": \"Information about each character's story arc\"\n",
+      "    },\n",
+      "    \"context\": \"You are creating a summary of each character and their story arc for the scifi novel. Use the information provided to create detailed summaries.\"\n",
       "  }\n",
       "}\n",
       "```\n"
@@ -358,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6c074408-d4bf-4217-a87d-84a0a5d2d5e8",
    "metadata": {
     "tags": []
@@ -368,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.013288\n"
+      "0.6687700000000003\n"
      ]
     }
    ],
