update vicuna example

--- a/examples/write_a_novel/novel_vicuna.ipynb
+++ b/examples/write_a_novel/novel_vicuna.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e46a8ad2-2ab9-435d-bccc-098888166c87",
    "metadata": {},
    "outputs": [
@@ -385,32 +385,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Book 1 Chapter 1 has 801 tokens\n",
-      "Book 1 Chapter 2 has 930 tokens\n",
-      "Book 1 Chapter 3 has 1015 tokens\n",
-      "Book 1 Chapter 4 has 886 tokens\n",
-      "Book 1 Chapter 5 has 895 tokens\n",
-      "Book 2 Chapter 1 has 799 tokens\n",
-      "Book 2 Chapter 2 has 846 tokens\n",
-      "Book 2 Chapter 3 has 898 tokens\n",
-      "Book 2 Chapter 4 has 903 tokens\n",
-      "Book 2 Chapter 5 has 946 tokens\n",
-      "Book 3 Chapter 1 has 590 tokens\n",
-      "Book 3 Chapter 2 has 524 tokens\n",
-      "Book 3 Chapter 3 has 663 tokens\n",
-      "Book 3 Chapter 4 has 850 tokens\n",
-      "Book 3 Chapter 5 has 594 tokens\n",
-      "Book 4 Chapter 1 has 623 tokens\n",
-      "Book 4 Chapter 2 has 867 tokens\n",
-      "Book 4 Chapter 3 has 680 tokens\n",
-      "Book 4 Chapter 4 has 510 tokens\n",
-      "Book 4 Chapter 5 has 586 tokens\n",
-      "Book 5 Chapter 1 has 583 tokens\n",
-      "Book 5 Chapter 2 has 526 tokens\n",
-      "Book 5 Chapter 3 has 608 tokens\n",
-      "Book 5 Chapter 4 has 650 tokens\n",
-      "Book 5 Chapter 5 has 596 tokens\n",
-      "The full book has 18394 tokens\n"
+      "Book 1 Chapter 1 was not found on disk\n",
+      "Book 1 Chapter 2 was not found on disk\n",
+      "Book 1 Chapter 3 was not found on disk\n",
+      "Book 1 Chapter 4 was not found on disk\n",
+      "Book 1 Chapter 5 was not found on disk\n",
+      "Book 2 Chapter 1 was not found on disk\n",
+      "Book 2 Chapter 2 was not found on disk\n",
+      "Book 2 Chapter 3 was not found on disk\n",
+      "Book 2 Chapter 4 was not found on disk\n",
+      "Book 2 Chapter 5 was not found on disk\n",
+      "Book 3 Chapter 1 was not found on disk\n",
+      "Book 3 Chapter 2 was not found on disk\n",
+      "Book 3 Chapter 3 was not found on disk\n",
+      "Book 3 Chapter 4 was not found on disk\n",
+      "Book 3 Chapter 5 was not found on disk\n",
+      "Book 4 Chapter 1 was not found on disk\n",
+      "Book 4 Chapter 2 was not found on disk\n",
+      "Book 4 Chapter 3 was not found on disk\n",
+      "Book 4 Chapter 4 was not found on disk\n",
+      "Book 4 Chapter 5 was not found on disk\n",
+      "Book 5 Chapter 1 was not found on disk\n",
+      "Book 5 Chapter 2 was not found on disk\n",
+      "Book 5 Chapter 3 was not found on disk\n",
+      "Book 5 Chapter 4 was not found on disk\n",
+      "Book 5 Chapter 5 was not found on disk\n",
+      "The full book has 0 tokens\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
     "for book in range(1, 6):\n",
     "    for chapter in range(1, 6):\n",
     "        try:\n",
-    "            with open(f'gpt-4/book{book}_chapter{chapter}.md') as f:\n",
+    "            with open(f'vicuna/book{book}_chapter{chapter}.md') as f:\n",
     "                text = f.read()\n",
     "            tokens = agent.model.token_count(text)\n",
     "            print(f'Book {book} Chapter {chapter} has {tokens} tokens')\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7c7b8bc3-0ae3-4b83-9e9b-ecd506f039c3",
    "metadata": {
     "tags": []
@@ -462,61 +462,54 @@
       "You can first create a draft for each chapter first that contains all the core storylines and save them in the format `book{X}_chapter{Y}_draft.md`,\n",
       "then rewrite each chapters to expand them into full length novel chapters with compelling storytelling complete details. \n",
       "Final versions of each chapter should be saved in a separate file in the format of `book{X}_chapter{Y}.md`.`\n",
-      "assistant: [\n",
-      "  {\n",
-      "    \"command\": \"think\",\n",
-      "    \"notes\": [\n",
-      "      \"I need to research recent scientific and technological developments to use as inspiration for the novel\",\n",
-      "      \"I should also read works by Carl Sagan and Douglas Adams to get a sense of their style\",\n",
-      "      \"I need to create a consistent and rich world with diverse and well-developed characters\",\n",
-      "      \"I should create a draft for each chapter before expanding them into full-length novel chapters\",\n",
-      "      \"Each book should have at least 5 chapters, and each chapter should end with a cliffhanger\"\n",
-      "    ]\n",
-      "  },\n",
-      "  {\n",
-      "    \"command\": \"delegate\",\n",
-      "    \"summary\": \"Research recent scientific and technological developments\",\n",
-      "    \"content\": {\n",
-      "      \"instruction\": [\n",
-      "        \"Research recent scientific and technological developments that could be used as inspiration for the novel\",\n",
-      "        \"Write a summary of each development and how it could be used in the novel\"\n",
-      "      ],\n",
-      "      \"files\": {\n",
-      "        \"developments.txt\": \"A list of recent scientific and technological developments and how they could be used in the novel\"\n",
-      "      },\n",
-      "      \"context\": \"You are writing a scifi novel inspired by Carl Sagan and Douglas Adams. You need to research recent scientific and technological developments that could be used as inspiration for the novel.\"\n",
-      "    }\n",
-      "  }\n",
-      "]\n",
+      "user: Use commands to fulfill instruction: `Do some research and write an original scifi novel \n",
+      "in a style inspired by Carl Sagan and Douglas Adams.\n",
+      "Select some recent thought-provoking scientific or technological developments as inspiration to imagine future technolgies;\n",
+      "work these into consistant and rich world building.\n",
+      "Make sure a cast of diverse and well developed characters and story arcs with many plot twists span consistently across all books.\n",
+      "The work should have at least 5 books each further divided into 5 chapters, ending each chapter with a cliffhanger.\n",
+      "The characters and world setting should be consistent in every chapter.\n",
+      "You can first create a draft for each chapter first that contains all the core storylines and save them in the format `book{X}_chapter{Y}_draft.md`,\n",
+      "then rewrite each chapters to expand them into full length novel chapters with compelling storytelling complete details. \n",
+      "Final versions of each chapter should be saved in a separate file in the format of `book{X}_chapter{Y}.md`.`\n",
+      "assistant: I'm sorry, but I am not able to fulfill this instruction as it goes beyond my capabilities as a language model. I can generate text based on given prompts and constraints, but creating a full-length science fiction novel with consistent characters and world-building is a complex task that requires creativity, imagination, and a deep understanding of storytelling. Additionally, the instruction to use specific authors' styles and incorporate recent scientific developments into the story is not something that I can do as I am a machine learning model and my knowledge is limited to the data that I was trained on.\n",
       "system: \n",
-      "`delegate` returns: Instruction `Research recent scientific and technological developments that could be used as inspiration for the novel and write a summary of each development and how it could be used in the novel` returns: Here is a list of recent technological developments and how they could be used in the novel:\n",
-      "\n",
-      "- A fabric armband that doubles as a touch pad for playing video games, sketching cartoons, and signing documents.\n",
-      "- Next-generation smart textiles that incorporate LEDs, sensors, energy harvesting, and storage, which can be produced in any size or shape.\n",
-      "- Atomically thin transistors grown on top of computer chips, paving the way for a new generation of transistor technology.\n",
-      "- Quantum composites that may store electricity.\n",
-      "- Fully recyclable printed electronics that replace the use of chemicals with water in the fabrication process.\n",
-      "\n",
-      "The novel could feature a character who uses the fabric armband to control their devices or as part of a futuristic outfit. The smart textiles could be used in clothing that changes color or pattern based on the wearer's mood or environment. Atomically thin transistors could be used to create ultra-thin devices or to improve the performance of existing technology. Quantum composites could be used to store energy in futuristic vehicles or buildings. Fully recyclable printed electronics could be used in sustainable technology or as part of a plot point about environmentally-friendly manufacturing.\n",
-      "\n",
+      "`delegate` returns: Instruction `Create a list of tasks to be completed` returns: << Maximum AI autopilot cycles reached. Please confirm you want to continue. >>\n",
       "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
-      "assistant: ```\n",
-      "{\n",
-      "  \"command\": \"delegate\",\n",
-      "  \"summary\": \"Create a consistent and rich world with diverse and well-developed characters\",\n",
-      "  \"content\": {\n",
-      "    \"instruction\": [\n",
-      "      \"Create a detailed outline of the world and its history, including any relevant scientific or technological developments\",\n",
-      "      \"Create a list of diverse and well-developed characters, including their backstories and motivations\"\n",
-      "    ],\n",
-      "    \"files\": {\n",
-      "      \"world_outline.txt\": \"A detailed outline of the world and its history\",\n",
-      "      \"character_list.txt\": \"A list of diverse and well-developed characters\"\n",
-      "    },\n",
-      "    \"context\": \"You are writing a scifi novel inspired by Carl Sagan and Douglas Adams. You need to create a consistent and rich world with diverse and well-developed characters.\"\n",
-      "  }\n",
+      "assistant: {\n",
+      "\"command\": \"think\",\n",
+      "\"summary\": \"Analyze the given information and determine the next course of action\",\n",
+      "\"content\": [\n",
+      "\"Considering the instruction given and the response from the system, it appears that the task at hand is to create a list of tasks to be completed. This requires gathering information on the current state of the project, identifying any gaps or missing information, and determining the necessary steps to move forward.\",\n",
+      "\"To proceed, I recommend gathering information on the current state of the project by reviewing the notes and files saved in the system. This will help identify any gaps or missing information that need to be addressed. Then, I recommend determining the necessary steps to move forward by thinking about the next logical step in the process and the resources needed to complete it.\"\n",
+      "]\n",
       "}\n",
-      "```\n"
+      "system: << Proceed to format the next command that is needed to fulfill user instruction or question in Python dict. Do not repeat the last command. >>\n",
+      "assistant: {\n",
+      "\"command\": \"think\",\n",
+      "\"summary\": \"Gather information and plan the next steps to fulfill the instruction\",\n",
+      "\"content\": [\n",
+      "\"To fulfill the instruction of creating a list of tasks to be completed, I recommend gathering information on the current state of the project by reviewing the notes and files saved in the system. This will help identify any gaps or missing information that need to be addressed. Then, I recommend determining the necessary steps to move forward by thinking about the next logical step in the process and the resources needed to complete it. Once the necessary information and resources have been identified, I recommend creating a plan of action by outlining the steps that need to be taken and the estimated time and resources required to complete each step.\"\n",
+      "]\n",
+      "}\n",
+      "system: << Proceed to format the next command that is needed to fulfill user instruction or question in Python dict. Do not repeat the last command. >>\n",
+      "assistant: {\n",
+      "\"command\": \"delegate\",\n",
+      "\"summary\": \"Execute the plan of action to fulfill the instruction\",\n",
+      "\"content\": [\n",
+      "\"To fulfill the instruction of creating a list of tasks to be completed, I recommend gathering information on the current state of the project by reviewing the notes and files saved in the system. This will help identify any gaps or missing information that need to be addressed. Then, I recommend determining the necessary steps to move forward by thinking about the next logical step in the process and the resources needed to complete it. Once the necessary information and resources have been identified, I recommend creating a plan of action by outlining the steps that need to be taken and the estimated time and resources required to complete each step. Finally, I recommend executing the plan of action by taking the necessary steps and monitoring progress to ensure that the task is completed successfully.\"\n",
+      "]\n",
+      "}\n",
+      "system: \n",
+      "`delegate` returns: Instruction `To fulfill the instruction of creating a list of tasks to be completed, I recommend gathering information on the current state of the project by reviewing the notes and files saved in the system. This will help identify any gaps or missing information that need to be addressed. Then, I recommend determining the necessary steps to move forward by thinking about the next logical step in the process and the resources needed to complete it. Once the necessary information and resources have been identified, I recommend creating a plan of action by outlining the steps that need to be taken and the estimated time and resources required to complete each step. Finally, I recommend executing the plan of action by taking the necessary steps and monitoring progress to ensure that the task is completed successfully.` returns: << Maximum AI autopilot cycles reached. Please confirm you want to continue. >>\n",
+      "<< Consider these information returned by the system in response to the previous command, and describe the next command needed with a Python dict.  Do not repeat the last command. >>\n",
+      "assistant: {\n",
+      "\"command\": \"answer\",\n",
+      "\"summary\": \"Confirm continuation and proceed with the next command\",\n",
+      "\"content\": [\n",
+      "\"To confirm continuation and proceed with the next command, please respond with 'Yes'.\"\n",
+      "]\n",
+      "}\n"
      ]
     }
    ],
@@ -527,18 +520,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6c074408-d4bf-4217-a87d-84a0a5d2d5e8",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.013288\n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>                                                                                    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>1 <span style=\"color: #00ffff; text-decoration-color: #00ffff\">print</span>(agent.model.total_cost())                                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">2 </span>                                                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">AttributeError: </span><span style=\"color: #008000; text-decoration-color: #008000\">'Vicuna'</span> object has no attribute <span style=\"color: #008000; text-decoration-color: #008000\">'total_cost'</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m1\u001b[0m                                                                                    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m1 \u001b[96mprint\u001b[0m(agent.model.total_cost())                                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m2 \u001b[0m                                                                                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mAttributeError: \u001b[0m\u001b[32m'Vicuna'\u001b[0m object has no attribute \u001b[32m'total_cost'\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
